--- a/tools/model-exporter/model-export.cbp
+++ b/tools/model-exporter/model-export.cbp
@@ -94,6 +94,7 @@
 		</Compiler>
 		<Linker>
 		</Linker>
+		<Unit filename="include/Camera3D.h" />
 		<Unit filename="include/LoadScene.h" />
 		<Unit filename="include/Node3D.h" />
 		<Unit filename="include/SaveScene.h" />
@@ -101,6 +102,7 @@
 		<Unit filename="include/Vector2.h" />
 		<Unit filename="include/Vector3.h" />
 		<Unit filename="main.cpp" />
+		<Unit filename="src/Camera3D.cpp" />
 		<Unit filename="src/LoadScene.cpp" />
 		<Unit filename="src/Node3D.cpp" />
 		<Unit filename="src/SaveScene.cpp" />
