--- a/tools/model-exporter-cli/model-exporter-cli.cbp
+++ b/tools/model-exporter-cli/model-exporter-cli.cbp
@@ -96,6 +96,51 @@
 					<Add library="../assimp-4.0.1/build-win32/contrib/irrXML/libIrrXML.a" />
 				</Linker>
 			</Target>
+			<Target title="Win64Debug">
+				<Option output="Win64Debug/model-exporter" prefix_auto="1" extension_auto="1" />
+				<Option object_output="Win64Debug/obj/" />
+				<Option external_deps="../model-exporter-core/Win64Debug/libmodel-exporter-core.a" />
+				<Option type="1" />
+				<Option compiler="gcc" />
+				<Compiler>
+					<Add option="-g" />
+					<Add option="-Wall" />
+					<Add option="-std=c++11" />
+					<Add option="-fexceptions" />
+					<Add directory="../model-exporter-core/include" />
+					<Add directory="../assimp-4.0.1/include" />
+					<Add directory="../assimp-4.0.1/build-win64/include" />
+				</Compiler>
+				<Linker>
+					<Add library="../model-exporter-core/Win64Debug/libmodel-exporter-core.a" />
+					<Add library="../assimp-4.0.1/build-win64/code/libassimp.a" />
+					<Add library="../assimp-4.0.1/build-win64/contrib/zlib/libzlibstatic.a" />
+					<Add library="../assimp-4.0.1/build-win64/contrib/irrXML/libIrrXML.a" />
+				</Linker>
+			</Target>
+			<Target title="Win64Release">
+				<Option output="Win64Release/model-exporter" prefix_auto="1" extension_auto="1" />
+				<Option object_output="Win64Release/obj/" />
+				<Option external_deps="../model-exporter-core/Win64Release/libmodel-exporter-core.a;" />
+				<Option type="1" />
+				<Option compiler="gcc" />
+				<Compiler>
+					<Add option="-O2" />
+					<Add option="-Wall" />
+					<Add option="-std=c++11" />
+					<Add option="-fexceptions" />
+					<Add directory="../model-exporter-core/include" />
+					<Add directory="../assimp-4.0.1/include" />
+					<Add directory="../assimp-4.0.1/build-win64/include" />
+				</Compiler>
+				<Linker>
+					<Add option="-s" />
+					<Add library="../model-exporter-core/Win64Release/libmodel-exporter-core.a" />
+					<Add library="../assimp-4.0.1/build-win64/code/libassimp.a" />
+					<Add library="../assimp-4.0.1/build-win64/contrib/zlib/libzlibstatic.a" />
+					<Add library="../assimp-4.0.1/build-win64/contrib/irrXML/libIrrXML.a" />
+				</Linker>
+			</Target>
 		</Build>
 		<Unit filename="main.cpp" />
 		<Extensions>
