--- a/tools/model-exporter-core/model-exporter-core.cbp
+++ b/tools/model-exporter-core/model-exporter-core.cbp
@@ -74,6 +74,40 @@
 					<Add directory="../assimp-4.0.1/include" />
 				</Compiler>
 			</Target>
+			<Target title="Win64Debug">
+				<Option output="Win64Debug/model-exporter-core" prefix_auto="1" extension_auto="1" />
+				<Option working_dir="" />
+				<Option object_output="Win64Debug/obj/" />
+				<Option type="2" />
+				<Option compiler="gcc" />
+				<Compiler>
+					<Add option="-g" />
+					<Add option="-Wall" />
+					<Add option="-std=c++11" />
+					<Add option="-fexceptions" />
+					<Add option="-fPIC" />
+					<Add directory="include" />
+					<Add directory="../assimp-4.0.1/build-win64/include" />
+					<Add directory="../assimp-4.0.1/include" />
+				</Compiler>
+			</Target>
+			<Target title="Win64Release">
+				<Option output="Win64Release/model-exporter-core" prefix_auto="1" extension_auto="1" />
+				<Option working_dir="" />
+				<Option object_output="Win64Release/obj/" />
+				<Option type="2" />
+				<Option compiler="gcc" />
+				<Compiler>
+					<Add option="-O2" />
+					<Add option="-Wall" />
+					<Add option="-std=c++11" />
+					<Add option="-fexceptions" />
+					<Add option="-fPIC" />
+					<Add directory="include" />
+					<Add directory="../assimp-4.0.1/build-win64/include" />
+					<Add directory="../assimp-4.0.1/include" />
+				</Compiler>
+			</Target>
 		</Build>
 		<Unit filename="include/Animation3D.h" />
 		<Unit filename="include/Camera3D.h" />
