--- a/tools/com.samsung.dali.modelConverter/build.properties
+++ b/tools/com.samsung.dali.modelConverter/build.properties
@@ -5,4 +5,7 @@ bin.includes = plugin.xml,\
                .,\
                icons/,\
                css/default.css,\
-               Application.e4xmi
+               Application.e4xmi,\
+               lib/jackson-annotations-2.9.2.jar,\
+               lib/jackson-core-2.9.2.jar,\
+               lib/jackson-databind-2.9.2.jar
