--- a/tools/com.samsung.dali.modelconverter/.project
+++ b/tools/com.samsung.dali.modelconverter/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>com.samsung.dali.modelConverter</name>
+	<name>com.samsung.dali.modelconverter</name>
 	<comment></comment>
 	<projects>
 	</projects>
