Added Create Project handler.
- Added Project and ProjectSwitchConfirmationWorkflow.
- Added CreateProjectHandler, which creates project directory, extracts project template and instantiates manifest template.
- Added FileUtils with functionality for accessing resources of the RCP application, copying files and folders, and extracting files from a .zip package.
- Added project template and tizen-manifest.xml.template.

Change-Id: I26c23e52b05bed797823e8ed4625982b15878864

--- a/tools/com.samsung.dali.modelconverter/build.properties
+++ b/tools/com.samsung.dali.modelconverter/build.properties
@@ -8,4 +8,5 @@ bin.includes = plugin.xml,\
                Application.e4xmi,\
                lib/jackson-annotations-2.9.2.jar,\
                lib/jackson-core-2.9.2.jar,\
-               lib/jackson-databind-2.9.2.jar
+               lib/jackson-databind-2.9.2.jar,\
+               data/
