StartUp Class, initial application startup function
- Moved Tizen Studio patch check logic to StartUp, removing TizenPathDialogController,
  to break the mutual dependency with TizenPathDialog.
- Fixed typos in the names of GlobalData getters.
- Deduped mTizenRootPath in / from GlobalData.
- GlobalData will 1, update the sdb/tizen paths in setRootTizenPath() and 2, will
  include the names of the executables (with extension on Windows) in order to be more useful.

Change-Id: Id58c5d9d896f485b77b59a711f41031038bce64d

--- a/tools/com.samsung.dali.modelconverter/plugin.xml
+++ b/tools/com.samsung.dali.modelconverter/plugin.xml
@@ -16,6 +16,10 @@
                name="appName"
                value="com.samsung.dali.modelconverter">
          </property>
+         <property
+               name="lifeCycleURI"
+               value="bundleclass://com.samsung.dali.modelconverter/com.samsung.dali.modelconverter.controller.StartUp">
+         </property>
       </product>
    </extension>
 
