Added DeployAppHandler and its integration into the application model.
- Exposed ACTIVE_PROFILE in Settings (moved from ManageProfilesHandler).
- Renamed PackageAppDialog to DeployAppDialog in hope of a more accurate reflecion of its responsibility.
- Added capability to run LoggingProcessRunner's jobs asynchronously, and updated its usage.
- Added capability to get the return value of LoggingProcessRunner's last job.
- Added support for a version property, to CreateProjectHandler, Project and tizen-manifest.xml.template.
- Project also exposes a convenience getter to its bin/ path.

Change-Id: Iff5c84f91410fb4602a8c3bab27bb99d90ad8a2b

--- a/tools/com.samsung.dali.modelconverter/data/tizen-manifest.xml.template
+++ b/tools/com.samsung.dali.modelconverter/data/tizen-manifest.xml.template
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<manifest xmlns="http://tizen.org/ns/packages" api-version="3.0" package="$(AppId)" version="1.0.0">
+<manifest xmlns="http://tizen.org/ns/packages" api-version="3.0" package="$(AppId)" version="$(Version)">
 	<profile name="wearable"/>
 	<watch-application ambient-support="true" appid="$(AppId)" exec="watchloader" mainapp="true">
     	<label>$(AppLabel)</label>
