Edit Project Config
Change-Id: I3e525307d03ce13f3b43fd7405cc6b154ba79dd5

--- a/project.config
+++ b/project.config
@@ -1,29 +1,20 @@
-[project]
-	description = DALi scene launcher
 [access]
 	inheritFrom = All-Projects
 [access "refs/*"]
 	owner = group dalihub admins
-	owner = group user/Victor Cebollada (vcebollada)
 	label-Code-Review = -2..+2 group dalihub reviewers
 	label-Code-Review = -1..+1 group dalihub developers
 	label-Verified = -1..+1 group dalihub developers
 	submit = group dalihub reviewers
 [access "refs/for/refs/*"]
-	read = group user/Victor Cebollada (vcebollada)
-	push = group user/Victor Cebollada (vcebollada)
-	label-Code-Review = -2..+2 group user/Victor Cebollada (vcebollada)
-	label-Verified = -1..+1 group user/Victor Cebollada (vcebollada)
-	rebase = group user/Victor Cebollada (vcebollada)
-	removeReviewer = group user/Victor Cebollada (vcebollada)
-	submit = group user/Victor Cebollada (vcebollada)
+	read = group dalihub admins
+	push = group dalihub admins
+	label-Code-Review = -2..+2 group dalihub admins
+	rebase = group dalihub admins
+	removeReviewer = group dalihub admins
 [access "refs/heads/*"]
-	read = group user/Victor Cebollada (vcebollada)
-	create = group user/Victor Cebollada (vcebollada)
-	push = +force group user/Victor Cebollada (vcebollada)
-	pushMerge = group user/Victor Cebollada (vcebollada)
+	read = group dalihub admins
 [access "refs/tags/*"]
-	push = group user/Victor Cebollada (vcebollada)
-	push = +force group user/Victor Cebollada (vcebollada)
+	push = +force group dalihub admins
 [receive]
 	requireChangeId = true
