Updates to scene format / structure.
- updated the Animation format:
  "${name}":{$definition} -> { "name":"${name}", "animation":$definition }
- DliLoader and Scene3dLauncher now work on a map of animations;
- removed the writing of bitangents and the requirement for them being
  present upon loading, since they're not used (are calculated in shader);
- removed the requirement for a scenes/ folder in each subfolder of resources;
- added JsonWriter to facilitate serialization of dli;
- fixed model-exporter-core's Vector3;
- added diffuse color support to Light in model-exporter;

Change-Id: I619885fa2c32d1967211bfc2cdcf9c75123e3981

--- a/tools/model-exporter-core/model-exporter-core.cbp
+++ b/tools/model-exporter-core/model-exporter-core.cbp
@@ -111,6 +111,7 @@
 		</Build>
 		<Unit filename="include/Animation3D.h" />
 		<Unit filename="include/Camera3D.h" />
+		<Unit filename="include/JsonWriter.h" />
 		<Unit filename="include/Light.h" />
 		<Unit filename="include/LoadScene.h" />
 		<Unit filename="include/Node3D.h" />
@@ -120,6 +121,7 @@
 		<Unit filename="include/Vector3.h" />
 		<Unit filename="src/Animation3D.cpp" />
 		<Unit filename="src/Camera3D.cpp" />
+		<Unit filename="src/JsonWriter.cpp" />
 		<Unit filename="src/Light.cpp" />
 		<Unit filename="src/LoadScene.cpp" />
 		<Unit filename="src/Node3D.cpp" />
