model-exporter exports meshes separately from / after nodes.
- Mesh is now an object that can now be reasoned about separately;
- This enables functionality that requires the node hierarchy to be
  created (i.e. skinning);
- Node3D constructor automates the adding of a Node3D to its designated
  parent;
- various minor improvements: removed unused variables, improved const
  correctness; naming / readability etc.

Change-Id: I3aebeefeb7f36d7ea30bf2d1c7a0426019c8fa12

--- a/tools/model-exporter-core/model-exporter-core.cbp
+++ b/tools/model-exporter-core/model-exporter-core.cbp
@@ -114,6 +114,7 @@
 		<Unit filename="include/JsonWriter.h" />
 		<Unit filename="include/Light.h" />
 		<Unit filename="include/LoadScene.h" />
+		<Unit filename="include/Mesh.h" />
 		<Unit filename="include/Node3D.h" />
 		<Unit filename="include/SaveScene.h" />
 		<Unit filename="include/Scene3D.h" />
